kubernetes/kafka/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-kafka-deployment
spec:
  selector:
    matchLabels:
      app: worker-kafka
  replicas: 2
  template:
    metadata:
      labels:
        app: worker-kafka
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: worker-kafka
        image: osmanpl9610/worker-kafka:latest
        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-kafka
spec:
  selector:
    matchLabels:
      role: grpc-kafka
  replicas: 2
  template:
    metadata:
      labels:
        role: grpc-kafka
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: client-grpc-kafka
        image: osmanpl9610/client-grpc-kafka:latest
        ports:
        - containerPort: 4000
      - name: server-grpc-kafka
        image: osmanpl9610/server-grpc-kafka:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-kafka-service
spec:
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    role: grpc-kafka

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
  namespace: squidgame
spec:
  rules:
  - host: 35.184.172.30.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-kafka-service
            port:
              number: 4000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-injector
  namespace: squidgame
  labels:
    app: error-injector
spec:
  selector:
    matchLabels:
      app: error-injector
  replicas: 1
  template:
    metadata:
      labels:
        app: error-injector
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: error-injector
---
apiVersion: v1
kind: Service
metadata:
  name: error-injector
  namespace: squidgame
spec:
  ports:
  - name: service
    port: 4000
  selector:
    app: error-injector
